@@ -10,6 +10,7 @@ Version 2.5.0
 * Initial support for Mark6 units through the mark6meta library
 * Initial support for command line structure
 * mk5dir: can override (presumably incorrect) directory version number with --version1
+* mk5dir: no seg fault if cannot open output file
 
 Version 2.4.0
 ~~~~~~~~~~~~~
